--- a/release-notes.txt
+++ b/release-notes.txt
@@ -1,3 +1,117 @@
+----------------------------------------------2.2.0.xxxx-------------------------------------------
+
+Features:
+1. Connecting to system behind NAT (desktop clent, mobile clients, web-client). Added authorization support for new media proxy.
+2. Added a new light skin. Introduced the option in System/Settings to switch between dark (regular) and light (introduced) skin.
+3. PTZ tours.
+4. Added a new events and actions:
+    - Continius sound action on "Motion on camera" and "Input signal on camera"
+    - Disk is full
+    - "Media server is started" diagnostic event
+5. Added a checkbox into installer "Allow server to optimize cameras settings". If it's on than MS can changed stream settings for all new cameras.
+   Also it can be changed for the current camera in "Camera settings" dialog.
+6. A simple way to restore archive: 
+    - Added a new button to "Server settings" dialog. 
+    - Archive can be restored without stopping recording.
+7. Improved compatibility mode: added possibility to download of old versions of client.
+8. Desktop cameras: Displays local desktop. Video can be recorded. All settings are from Screen recording settings.
+9. Auto detection of new layout aspect ratio.
+   - Default layout aspect ration is 16:9
+   - if just one item is added, than layout AR is equal to the item's AR
+   - if multiple items are added, than layout AR ia a peek the most common AR among this new items
+10. Added possibility to fix aspect ratio for video resource: Added checkbox on "Camera settings -> Expert".
+11. Generic http plugin.
+12. Export progress dialog is not modal.
+13. Added a possibility to choose corner where to place the timestamp:
+   - For screenshots. User click on button "Screenshot", dialog "Save Screenshot as" appears.
+     There is Drop-Down List "Timestamps" at the bottom of dialog window. User can choose one of next value: No timestamp, Top left corner, Top right corner, Bottom left corner, Bottom right corner. 
+   - For export selected area. The same Drop-Down List appears at the bottom of dialog "Export Video As".
+     Drop-Down List "Timestamps" is disabled for .exe format.
+14. A simple way to disable auto discovery: Added a new checkbox "Enable auto discovery" on "System settings -> Server"
+15. Added a possibility to resize resource tree panel.
+16. Added possibility to change client customization at startup time by passing a customization path
+
+Improvements:
+1. Added more default cameras' passwords for auto-discovery.
+2. Fish eye flag is always available now. If enable "fish eye" flag, than PTZ is disabled for this camera.
+3. Added vendor name to "Camera settings" and "Cameras' list".
+4. Dewarping is improved. Added a new additional tab to adjust center and radius of the dewarping.
+5. A new DB is created, if installation fails due to failed migration DB.
+6. Improved manual camera addition dialog (added sane progress in manual camera addition dialog, found cameras display in the list while searching)
+7. Added a server external guid. It prevents the server cloning issue. 
+8. Changed warning message, if activate licenses with differ customization
+9. Health monitoring improvements: 
+   - Added a server up time to Health monitoring.
+   - Displays only 10 characters of the network connection name
+   - Message "No is replaced by "Server offline"
+11. Event and Actions -> Camera list. 
+    - All cameras that don't support I/O are highlighted in red.
+    - Added tooltips with error description
+    - "Once per" has been changed to "No more than once per"
+12. Added audio-support for some Acti cameras E-,D-, T-, K-, B-, I-series.
+13. Increased max fps up to 30 fps for http&rtsp plugin.
+14. Added a zoom combination "ALT+MW" to enable/disable mouse wheel zooming on scene.
+16. Incompatible auto-found ECs in the Login Dialog is highlighted and EC version is displayed.
+17. Added more informative messages on login gialog:
+   - "You are trying to connect to incompatible Enterprise Controller.", If connect with different costomizations.
+   - "Wrong user or password", If connect with incorrect password/login.
+   - If connection cannot be established, than leave the old message.
+18. Improved license expiration warning message:
+   - Dialog "License Expiration"is displayed only for Administrator
+   - Dialog "License Expiration" is displayed once per day per client place on 15, 10, 5, 3, 2, 1 day before license will be expired.
+   - Dialog is displayed only once after license is expired.
+19. Changed default events accumulation time for default rules from "instant" to "30 second".
+20. The last minute of archive displays differently.
+21. Introduced a setting in a software for video timeout:
+    - Added checkbox "Auto pause video" on "System settings -> General"
+    - if checkbox is on, video is paused if user does not move mouse
+22. Android. Added audio for rtsp transport (only for AAC encoding)
+23. Client only installer. Added parameter "Launch DW Spectrum when set up exist" at the last page.
+24. Screen shot makes always in HQ.
+25. Added a new button to open client log containing folder.
+26. Added a new action "Zoom to selection" to the context menu.
+    If click on it, the selection has been zoomed. If there are no selection on timeline, "Zoom to selection" is not available.
+27. Ability to view client logs and clear cache.
+    
+Bugs:
+1. Tray tool. Incorrect EC port in the list if it has been changed.Fixed.
+2. After upgrade MS, an old version displays in "About". Fixed.
+3. If there are more than 3000 resource, EC cannot be restarted.Fixed.
+4. "Say" is renamed to "Speak".
+5. "Change Camera Aspect Ratio" is removed from camera's context menu
+6. MS server log file size limits is increased in 5 times.
+7. TrayTool menu does not hide by clicking outside of it. Fixed.
+8. If change user's layout and click "Save as", it will be saved for this user (not for current user). Fixed
+9. Dialog "Connect to EC" does not appears if reopen client after changing language. Fixed. 
+10. If item was opened before, it is opened with the same AR. 
+11. Vivotek encoder. 1st panel is not in the group after discovery. Fixed.
+12. If stop server, delete it from resource tree and start, version is empty. Fixed.
+13. Zoom window. Video playing upside down if move zoom window from fish-eye camera to another item. Fixed.
+14. Multi-view export. Quality identificator has been removed.
+15. Client isn't connected automatically after changing language. Fixed.
+16. +- timeline zoom inertia . Fixed.
+17. Timeline doesn't hide if to toggle to fullscreen by F11. Fixed
+18. Removed "Change resolution" in context menu for multi-view.
+19. Client does not respond after pressing "Alt+Space". Fixed
+20. Screen recording doesn't work for not primary screen.Fixed.
+21. DW PTZ camera's automatic name includes company name prefix. Fixed.
+22. Recording hasn't been stoped when licence was expired.
+23. Double-clicking on rotate item button doesn't start rotation
+24. Show all active notifications when set appropriate checkbox in notification settings (only for system messages)
+25. If click "help" on "Layout settings", than "Browse" has been opened. Fixed.
+26. Top panel isn't appeared after back from window mode.
+27. "IP address" in Media Server Settings is disabled for changing.
+28. Multiple select hours in calendar doesn't work. Fixed.
+
+Removed features:
+1.Hardware acceleration has been removed.
+2. Panic recording has been removed.
+3. Analog licenses has been removed.
+
+New cameras supported
+Arecont cameras: AV2256PM, AV2256PM-H.
+Samsung caemras: SND-5061, SND-7061
+
 ----------------------------------------------2.1.0.xxxx-------------------------------------------
 
 NEW FEATURES:
