+26. Added dewarping for pictures.
<==== Mercurial data ====>
Branch: release_2.2

--- a/release-notes.txt
+++ b/release-notes.txt
@@ -74,6 +74,7 @@ Improvements:
 24. Added a new action "Zoom to selection" to the timeline context menu.
     If click on it, the selection has been zoomed. If there are no selection on timeline, "Zoom to selection" is not available.
 25. Ability to view client logs and clear cache.
+26. Added dewarping for pictures.
     
 Bugs Fixed:
 1. Tray tool. Incorrect EC port in the list if it has been changed.Fixed.
