--- a/release-notes.txt
+++ b/release-notes.txt
@@ -1,4 +1,4 @@
-----------------------------------------------2.2.0.xxxx-------------------------------------------
+----------------------------------------------2.2.1.xxxx-------------------------------------------
 
 Improvements:
 1. Onvif protocol support is improved
@@ -14,6 +14,24 @@ Bugs Fixed:
 5. If new drive is mounted after mediaserver started it will stop recording after being filled. Fixed.
 6. Client crash during media folder check under some rare conditions. Fixed.
 7. Update Feed url was broken. Fixed.
+
+2.2.1.xxxx - Additional for Vista
+Improvements:
+1. Removed all screenshots with  HD Witness in Help.
+2. Added ONVIF presets for VK2-1080PTZ and V2-Encoder.
+3. Disabled presets for VK2-720VZMI and VK2-720VZMX.
+4. Added focus for  VK2-600PTZ and VK2-Encoder.
+
+
+2.2.1.xxxx - Additional for DW
+Improvements:
+5. Better PTZ support for DW cameras:
+DWC-MB721M4TIR - Zoom/Focus is not supported, but displayed. Now we do not display PTZ controls at all
+DWC-MB421TIR - PTZ Move is not supported, but displayed (only zoom supported). Now we display only zoom controls.
+DWC-MB950TIR & DWC-MV950TIR - neither PTZ move nor Zoom are supported, but displayed (on the web page zoom/focus is displayed but doesn't work as well). Now we do not display PTZ controls at all
+DWC-MPTZ20XFM - advanced PTZ (point and rectangle) did not work. Now advanced PTZ works well.
+CP04 Encoder - Added ONVIF presets
+
 
 ----------------------------------------------2.2.0.xxxx-------------------------------------------
 
